<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btmegasena"
        android:layout_width="161dp"
        android:layout_height="54dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#207C3B"
        android:text="@string/mega_sena"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/btquina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btquina"
        android:layout_width="161dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#111949"
        android:text="@string/quina"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btmegasena"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btlotomania"
        android:layout_width="161dp"
        android:layout_height="54dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#8C4627"
        android:text="@string/lotomania"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btlotofacil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btmegasena"
        app:layout_constraintVertical_bias="0.009" />

    <Button
        android:id="@+id/btlotofacil"
        android:layout_width="161dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="36dp"
        android:text="@string/lotofacil"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btlotomania"
        app:layout_constraintTop_toBottomOf="@+id/btquina"
        app:layout_constraintVertical_bias="0.009" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="338dp"
        android:layout_height="92dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="37dp"
        android:contentDescription="@string/logo_loteria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loteriamenu" />

    <ImageButton
        android:id="@+id/voltar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/voltar"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <Button
        android:id="@+id/btSairMenu"
        android:layout_width="186dp"
        android:layout_height="52dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="113dp"
        android:backgroundTint="#7E1031"
        android:text="@string/btSair"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btlotomania" />

</androidx.constraintlayout.widget.ConstraintLayout>